--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "my program for learning react + redux",
   "main": "index.js",
   "scripts": {
-    "start": "set NODE_ENV=dev && webpack-dev-server --progress --colors --port 8080",
-    "build": "rm -rf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --colors",
-    "mock": "node ./mock/server.js"
+    "start": "NODE_ENV=dev webpack-dev-server --progress --colors",
+    "mock": "node ./mock/server.js",
+    "build": "rm -rf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --colors"
   },
   "repository": {
     "type": "git",
