--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "set NODE_ENV=dev && webpack-dev-server --progress --colors --port 8080",
-    "build": "rm -rf ./build && NODE_ENV=production webpack --config ./webpack.production.config.js --progress --colors",
+    "build": "set NODE_ENV=production && webpack --config ./webpack.production.config.js --progress --colors",
     "mock": "node ./mock/server.js"
   },
   "repository": {
